# advent-of-code-2021

./: Cargo.toml  Makefile  README.md
2021/advent-of-code/aoc-puzzles/: Cargo.toml
2021/advent-of-code/aoc-puzzles/src/: day_1.rs  day_7.rs  day_8.rs  lib.rs
advent-of-code/: Cargo.toml
advent-of-code/aoc-puzzles/: Cargo.toml
advent-of-code/aoc-puzzles/src/: day_1.rs  day_10.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs
advent-of-code/src/: main.rs
aoc-codegen/: Cargo.toml
aoc-codegen/src/: data.rs  main.rs
