[package]
name = "aoc-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive"]}
chrono = "0.4"
futures-util = "0.3"
reqwest = {version = "0.11", features = ["stream"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }